crates/math-core/tests/snapshots/conversion_test__textbackslash.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{\\textbackslash}"
---
<math>
    <mtext>\</mtext>
</math>
