crates/math-core/tests/snapshots/conversion_test__textbf.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\textbf{x}"
---
<math>
    <mtext><b>x</b></mtext>
</math>
