crates/math-core/tests/snapshots/conversion_test__textbf_with_digit_dot.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\textbf{1234.}"
---
<math>
    <mtext><b>1234.</b></mtext>
</math>
