crates/math-core/tests/snapshots/conversion_test__textcolor_empty_arg.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "a\\textcolor{red}{}b"
---
<math>
    <mi>a</mi>
    <mrow style="color:#FF0000;">
        <mrow></mrow>
    </mrow>
    <mi>b</mi>
</math>
