crates/math-core/tests/snapshots/conversion_test__textcolor_single_token_arg.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "a\\textcolor{red}x"
---
<math>
    <mi>a</mi>
    <mrow style="color:#FF0000;">
        <mi>x</mi>
    </mrow>
</math>
