crates/math-core/tests/snapshots/conversion_test__textit.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\textit{x}"
---
<math>
    <mtext><i>x</i></mtext>
</math>
